--- a/iTunesSearch/TableViewCell.xib
+++ b/iTunesSearch/TableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14D72i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -7,40 +7,108 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="TableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="65"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="300" height="186"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome da Mídia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UIA-JU-luV">
-                        <rect key="frame" x="8" y="8" width="284" height="21"/>
+                        <rect key="frame" x="8" y="8" width="284" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tipo da Mídia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Z5-yj-wnl">
-                        <rect key="frame" x="8" y="34" width="284" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo da Mídia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Z5-yj-wnl">
+                        <rect key="frame" x="8" y="34" width="73.5" height="14"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" red="0.89928382640000004" green="0.12798005339999999" blue="0.001599563868" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duração" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V3j-ig-qrO">
+                        <rect key="frame" x="8" y="53" width="45.5" height="14"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" red="0.89928382640000004" green="0.12798005339999999" blue="0.001599563868" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="País" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V5h-cQ-cdm">
+                        <rect key="frame" x="184" y="53" width="23" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14" id="ULn-c9-une"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" red="0.89928382640000004" green="0.12798005339999999" blue="0.001599563868" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ULn-c9-une"/>
+                            </mask>
+                        </variation>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gênero" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oiu-en-x72">
+                        <rect key="frame" x="184" y="34" width="39.5" height="14"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                         <color key="textColor" red="0.89928382640000004" green="0.12798005339999999" blue="0.001599563868" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="V3j-ig-qrO" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="0Gy-AN-4dN"/>
+                    <constraint firstItem="V3j-ig-qrO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="0yj-gx-OGj"/>
                     <constraint firstAttribute="trailingMargin" secondItem="6Z5-yj-wnl" secondAttribute="trailing" id="20H-3b-RZ8"/>
+                    <constraint firstItem="V5h-cQ-cdm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="7oy-Xe-eLa"/>
+                    <constraint firstItem="Oiu-en-x72" firstAttribute="top" secondItem="UIA-JU-luV" secondAttribute="bottom" constant="5.5" id="8yh-TV-fdZ"/>
                     <constraint firstItem="6Z5-yj-wnl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="96O-aR-ps1"/>
+                    <constraint firstItem="Oiu-en-x72" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="BjP-Nv-jVy"/>
+                    <constraint firstItem="V5h-cQ-cdm" firstAttribute="top" secondItem="Oiu-en-x72" secondAttribute="bottom" constant="5" id="CDZ-ax-v0F"/>
+                    <constraint firstItem="V5h-cQ-cdm" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="DDN-s2-ZlN"/>
+                    <constraint firstItem="V3j-ig-qrO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="FUx-HG-waQ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="V3j-ig-qrO" secondAttribute="trailing" id="L2P-Jc-4Q7"/>
                     <constraint firstItem="UIA-JU-luV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Q1V-YW-Wh5"/>
+                    <constraint firstItem="Oiu-en-x72" firstAttribute="leading" secondItem="6Z5-yj-wnl" secondAttribute="trailing" constant="43" id="QFD-5b-X46"/>
+                    <constraint firstItem="Oiu-en-x72" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="QKY-0S-AlN"/>
+                    <constraint firstItem="V5h-cQ-cdm" firstAttribute="top" secondItem="Oiu-en-x72" secondAttribute="bottom" constant="5" id="RQ6-8r-lzg"/>
+                    <constraint firstItem="V3j-ig-qrO" firstAttribute="top" secondItem="6Z5-yj-wnl" secondAttribute="bottom" constant="5" id="SUB-vn-BX3"/>
+                    <constraint firstItem="6Z5-yj-wnl" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="VYI-G7-fUR"/>
+                    <constraint firstItem="6Z5-yj-wnl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="YHI-ue-RUu"/>
                     <constraint firstItem="UIA-JU-luV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="YdC-rX-aV6"/>
+                    <constraint firstItem="Oiu-en-x72" firstAttribute="leading" secondItem="6Z5-yj-wnl" secondAttribute="trailing" constant="102.5" id="b2W-t7-Gvd"/>
                     <constraint firstAttribute="trailingMargin" secondItem="UIA-JU-luV" secondAttribute="trailing" id="cTH-Nq-14q"/>
+                    <constraint firstItem="Oiu-en-x72" firstAttribute="top" secondItem="V3j-ig-qrO" secondAttribute="bottom" constant="5" id="fDk-ID-Suv"/>
+                    <constraint firstItem="V5h-cQ-cdm" firstAttribute="leading" secondItem="V3j-ig-qrO" secondAttribute="trailing" constant="43" id="ghb-us-50r"/>
+                    <constraint firstItem="V5h-cQ-cdm" firstAttribute="leading" secondItem="V3j-ig-qrO" secondAttribute="trailing" constant="130.5" id="mzR-7V-r0T"/>
                     <constraint firstItem="6Z5-yj-wnl" firstAttribute="top" secondItem="UIA-JU-luV" secondAttribute="bottom" constant="5" id="tJH-0d-wda"/>
+                    <constraint firstItem="V5h-cQ-cdm" firstAttribute="leading" secondItem="V3j-ig-qrO" secondAttribute="trailing" constant="51" id="th6-W0-Q3e"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="20H-3b-RZ8"/>
+                        <exclude reference="96O-aR-ps1"/>
+                        <exclude reference="VYI-G7-fUR"/>
+                        <exclude reference="0Gy-AN-4dN"/>
+                        <exclude reference="FUx-HG-waQ"/>
+                        <exclude reference="L2P-Jc-4Q7"/>
+                        <exclude reference="BjP-Nv-jVy"/>
+                        <exclude reference="QFD-5b-X46"/>
+                        <exclude reference="QKY-0S-AlN"/>
+                        <exclude reference="fDk-ID-Suv"/>
+                        <exclude reference="7oy-Xe-eLa"/>
+                        <exclude reference="CDZ-ax-v0F"/>
+                        <exclude reference="DDN-s2-ZlN"/>
+                        <exclude reference="ghb-us-50r"/>
+                        <exclude reference="th6-W0-Q3e"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="genero" destination="Oiu-en-x72" id="Fsf-uv-Svu"/>
                 <outlet property="nome" destination="UIA-JU-luV" id="ubX-WX-gam"/>
+                <outlet property="pais" destination="V5h-cQ-cdm" id="bPP-zm-j3D"/>
+                <outlet property="tempo" destination="V3j-ig-qrO" id="DmH-XN-YUQ"/>
                 <outlet property="tipo" destination="6Z5-yj-wnl" id="vYj-HE-tLd"/>
             </connections>
-            <point key="canvasLocation" x="577" y="80.5"/>
+            <point key="canvasLocation" x="577" y="141"/>
         </tableViewCell>
     </objects>
 </document>
