--- a/iTunesSearch/TableView.xib
+++ b/iTunesSearch/TableView.xib
@@ -6,6 +6,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TableViewController">
             <connections>
+                <outlet property="botao" destination="kLb-0V-AiW" id="xob-mO-kgH"/>
+                <outlet property="lang" destination="ANj-tz-uPq" id="PP6-AM-8rB"/>
                 <outlet property="tableview" destination="ngZ-S8-I6d" id="Wqk-cU-rGk"/>
                 <outlet property="texto" destination="Wc8-cF-Cl2" id="Fie-Je-bhr"/>
                 <outlet property="view" destination="4xj-xW-D7l" id="jIW-0j-keS"/>
@@ -21,7 +23,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="apple" borderStyle="roundedRect" placeholder="Digite sua busca" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wc8-cF-Cl2">
-                    <rect key="frame" x="8" y="22" width="340" height="30"/>
+                    <rect key="frame" x="8" y="22" width="219" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -34,18 +36,31 @@
                         <action selector="busca:" destination="-1" eventType="touchUpInside" id="b0T-U0-U0b"/>
                     </connections>
                 </button>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ANj-tz-uPq">
+                    <rect key="frame" x="274" y="22" width="123" height="29"/>
+                    <segments>
+                        <segment title="Pt"/>
+                        <segment title="En"/>
+                        <segment title="Fr"/>
+                    </segments>
+                    <connections>
+                        <action selector="trocaLang:" destination="-1" eventType="valueChanged" id="pDr-hB-Xh1"/>
+                    </connections>
+                </segmentedControl>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="ANj-tz-uPq" firstAttribute="top" secondItem="4xj-xW-D7l" secondAttribute="top" constant="22" id="4On-P7-BWP"/>
                 <constraint firstItem="Wc8-cF-Cl2" firstAttribute="leading" secondItem="4xj-xW-D7l" secondAttribute="leading" constant="8" id="EfV-2N-wR2"/>
                 <constraint firstItem="ngZ-S8-I6d" firstAttribute="top" secondItem="kLb-0V-AiW" secondAttribute="bottom" constant="29" id="G2P-Yh-gIN"/>
                 <constraint firstAttribute="bottom" secondItem="ngZ-S8-I6d" secondAttribute="bottom" id="GDe-bG-f5V"/>
                 <constraint firstItem="kLb-0V-AiW" firstAttribute="leading" secondItem="Wc8-cF-Cl2" secondAttribute="trailing" constant="129" id="KIa-Dy-0O0"/>
                 <constraint firstItem="ngZ-S8-I6d" firstAttribute="top" secondItem="Wc8-cF-Cl2" secondAttribute="bottom" constant="29" id="Kyj-G5-RxM"/>
+                <constraint firstItem="ANj-tz-uPq" firstAttribute="leading" secondItem="Wc8-cF-Cl2" secondAttribute="trailing" constant="6" id="OcD-Qp-IkS"/>
                 <constraint firstItem="ngZ-S8-I6d" firstAttribute="leading" secondItem="4xj-xW-D7l" secondAttribute="leading" id="Og6-Nr-9oe"/>
                 <constraint firstItem="ngZ-S8-I6d" firstAttribute="top" secondItem="4xj-xW-D7l" secondAttribute="top" id="Wc2-en-Ztt"/>
                 <constraint firstAttribute="trailing" secondItem="ngZ-S8-I6d" secondAttribute="trailing" id="Yj0-30-0ZM"/>
-                <constraint firstAttribute="trailing" secondItem="kLb-0V-AiW" secondAttribute="trailing" constant="52" id="Zvt-Ex-1CO"/>
+                <constraint firstAttribute="trailing" secondItem="kLb-0V-AiW" secondAttribute="trailing" constant="5" id="Zvt-Ex-1CO"/>
                 <constraint firstItem="kLb-0V-AiW" firstAttribute="top" secondItem="4xj-xW-D7l" secondAttribute="top" constant="22" id="dSg-kZ-AW3"/>
                 <constraint firstItem="ngZ-S8-I6d" firstAttribute="leading" secondItem="4xj-xW-D7l" secondAttribute="leading" id="ij0-ey-1O6"/>
                 <constraint firstAttribute="trailing" secondItem="ngZ-S8-I6d" secondAttribute="trailing" id="r32-yA-has"/>
